# wolves_in_silico

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
analyses/: population_model.ipynb
src/wolves_in_silico/abm/: game.py  group.py  player.py
src/wolves_in_silico/base/: game.py  group.py
src/wolves_in_silico/pop/: game.py
src/wolves_in_silico/vis/: plot.py
test/core/: test_game.py  test_group.py  test_player.py
tests/abm/: test_game.py  test_gamerecord.py  test_group.py  test_player.py
tests/base/: test_game.py
tests/core/: test_game.py  test_group.py  test_player.py
tests/pop/: test_game.py  test_group.py
tests/vis/: test_plot.py
wolves_in_silico/: game.py  group.py  play.py  player.py
wolves_in_silico/abm/: game.py  group.py  player.py
wolves_in_silico/base/: game.py  group.py
wolves_in_silico/core/: game.py  group.py  player.py
wolves_in_silico/pop/: game.py  group.py
wolves_in_silico/vis/: plot.py
