[project]
name = "wolves_in_silico"
version = "0.0.1"
dependencies = [
    "numpy",
    "matplotlib",
]
requires-python = ">3.10"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"
include-package-data = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.flake8.plugins]
flake8-class-attributes-order = ["+*"]
flake8-comprehensions = ["+*"]
flake8-print = ["+*"]
pep8-naming = ["+*"]

[tool.flake8]
format = "grouped"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py310

[flake8]
exclude = ["venv", "wolves_in_silico.egg-info", "build/*", ".git/*", ".tox"]
format = "grouped"

[testenv]
deps =
    flake8
    flake8-class-attributes-order
    flake8-comprehensions
    flake8-print  
    pytest
    pytest-cov
commands =
    flake8 --max-line-length 120
    pytest --disable-warnings --cov-report term

[run]
omit = .tox/*,venv/*,tests/*,htmlcov*,analyses*

"""